samples/_failures_safe/1761001892_f4deaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e730dc85.c:172:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  172 | const char* token_type_name
      | ^~~~~
